--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,6 +1,8 @@
 name: "Code Scanning - Action"
 
 on:
+  push:
+    branches: [ main ]
   pull_request:
     branches: [main]
 
@@ -27,6 +29,7 @@ jobs:
         uses: github/codeql-action/init@v1
         with:
           languages: java
+          debug: true
 
 
       - run: |
