--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     
 env:
+  WORKSPACE: /home/runner/work 
   CODEQL_HOME: /home/runner/work/codeql-home
   CODEQL_BINARY: /home/runner/work/codeql-home/codeql/codeql
 
@@ -25,6 +26,11 @@ jobs:
         uses: actions/checkout@v2
 
       - uses: bazelbuild/setup-bazelisk@v1
+      
+      - name: Setup Required Directories and Files
+        run: |
+          cd ${{ env.WORKSPACE }}
+          mkdir ${{ env.CODEQL_HOME }}
       
       - name: Download CodeQL Bundle
         run: |
