--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -7,7 +7,7 @@ on:
 env:
   WORKSPACE: /home/runner/work 
   CODEQL_HOME: /home/runner/work/codeql-home
-  CODEQL_BINARY: /home/runner/work/codeql-home/codeql/codeql
+  CODEQL_URL: https://github.com/github/codeql-action/releases/download/codeql-bundle-20220728/codeql-bundle-linux64.tar.gz
 
 jobs:
   CodeQL-Build:
@@ -35,9 +35,7 @@ jobs:
       - name: Download CodeQL Bundle
         run: |
           cd ${{ env.CODEQL_HOME }}
-          wget -q https://github.com/github/codeql-action/releases/download/codeql-bundle-20220728/codeql-bundle-linux64.tar.gz
-          tar xzf ./codeql-bundle-linux64.tar.gz
-      
+          wget -q ${{ env.CODEQL_URL }}
 
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
@@ -45,7 +43,7 @@ jobs:
         with:
           languages: java
           debug: true
-          tools: ${{ env.CODEQL_BINARY }}
+          tools: ${{ env.CODEQL_HOME }}/codeql-bundle-linux64.tar.gz
 
 
       - run: |
