--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -47,7 +47,7 @@ jobs:
 
 
       - run: |
-           USE_BAZEL_VERSION=5.1.0 bazel build --spawn_strategy=local --nouse_action_cache --noremote_accept_cached --noremote_upload_local_results //:ProjectRunner
+          ./codeql-bazel-build.sh //:ProjectRunner
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
